# common-data-usage-pipelines

./: .flake8  .gitignore  Dockerfile  README.md  cli.sh  create_gcp_bucket.sh  pyproject.toml  sync_artifacts.sh
common_data_usage_pipelines/: luigi_error_handler.py  sentry.py  settings.py
common_data_usage_pipelines/cli/: cli.py
config/: data_gov_site_config.toml
dbt/: pyproject.toml
dbt/common_data_usage_dbt/: clean_ckan_data.sh  clean_final.sh  dbt_project.yml  profiles.yml
dbt/common_data_usage_dbt/models/ckan_clean/: ckan_clean_all_resources.sql  ckan_clean_datasets.sql  ckan_clean_json_resources.sql  ckan_clean_organizations.sql  schema.yml  sources.yml
dbt/common_data_usage_dbt/models/final/: final_clean_all_resources.sql  final_clean_datasets.sql  final_clean_datasets_with_resource_count.sql  final_clean_organizations.sql  final_clean_organizations_with_resource_count.sql  final_resource_repository_mappings.sql  final_sourcegraph_search_results.sql  sources.yml
docs/: README.md
docs/assets/: stages_v2.drawio
