[tool.poetry]
name = "open-data-usage-research-dbt"
version = "0.1.0"
description = ""
authors = ["Michał Oręziak <micorix.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "open_data_usage_research_dbt"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
dbt-duckdb = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
